<resources>
    <string name="app_name">Garde-Robe Lite</string>
    ///// LogActivity /////
    <string name="username">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="signup">S\'inscrire</string>
    <string name="login">Se connecter</string>
    <string name="welcome">Bienvenue,</string>
    <string name="errorUsername">Veuillez saisir un identifiant</string>
    <string name="errorPassword">Veuillez saisir un mot de passe</string>
    <string name="errorCredentials">Veuillez saisir un identifiant et un mot de passe</string>
    ///// ListActivity /////
    ///// DetailActivity /////
    <string name="State1">Propre</string>
    <string name="State2">Sale</string>
    <string name="State3">Perdu</string>
    <string name="Color">Couleur</string>
    <string name="Material">Matériel</string>
    <string name="Type">Type</string>
    <string name="Season">Saison</string>
    <string name="GivenBy">Offert par</string>
    <string name="Details">Détails</string>
    <string name="Image">Image</string>
    <string name="Name">Nom</string>
    ///// AddActivity /////
    <string name="SuggestedName">Nom suggéré</string>
    <string name="Add">Ajouter</string>
    ///// Menu /////
    <string name="menu_listActivity">Garde-robe</string>
    <string name="menu_addActivity">Ajouter un item</string>
    <string name="menu_logOut">Déconnexion</string>
    <string name="header_text">Menu de navigation</string>
    <string name="open_drawer">Tiroir ouvert</string>
    <string name="close_drawer">Tiroir fermé</string>
    <string name="Wait">Veuillez patienter</string>
    <string name="Creds">Vérification des informations</string>
</resources>
