<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:id="@+id/drawer_layout">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddActivity"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Type"
                android:textColor="@color/colorPrimaryDark"
                android:paddingEnd="10dp"/>
            <EditText
                android:id="@+id/inputType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Color"
                android:textColor="@color/colorPrimaryDark"
                android:paddingEnd="10dp"/>
            <EditText
                android:id="@+id/inputColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Details"
                android:textColor="@color/colorPrimaryDark"
                android:paddingEnd="10dp"/>
            <EditText
                android:id="@+id/inputDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Material"
                android:textColor="@color/colorPrimaryDark"
                android:paddingEnd="10dp"/>
            <EditText
                android:id="@+id/inputMaterial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Season"
                android:textColor="@color/colorPrimaryDark"
                android:paddingEnd="10dp"/>
            <EditText
                android:id="@+id/inputSeason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GivenBy"
                android:textColor="@color/colorPrimaryDark"
                android:paddingEnd="10dp"/>
            <EditText
                android:id="@+id/inputGivenBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Image"
                android:textColor="@color/colorPrimaryDark"
                android:paddingEnd="10dp"/>
            <EditText
                android:id="@+id/inputImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:textColor="@color/colorPrimaryDark"
                android:paddingEnd="10dp"/>
            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/SuggestedName"
                android:height="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Add"
                    android:background="@color/colorAccent"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer"/>
</android.support.v4.widget.DrawerLayout>