<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:id="@+id/drawer_layout">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <Button
                android:id="@+id/btnState1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/State1"
                android:background="@drawable/button"/>
            <Button
                android:id="@+id/btnState2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/State2"
                android:background="@drawable/button"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"/>
            <Button
                android:id="@+id/btnState3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/State3"
                android:background="@drawable/button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="235dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/black_shirt"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Type"
                        android:textColor="@color/colorPrimaryDark"
                        android:paddingEnd="10dp"/>
                    <TextView
                        android:id="@+id/textType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="25dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Color"
                        android:textColor="@color/colorPrimaryDark"
                        android:paddingEnd="10dp"/>
                    <TextView
                        android:id="@+id/textColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="25dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Details"
                        android:textColor="@color/colorPrimaryDark"
                        android:paddingEnd="10dp"/>
                    <TextView
                        android:id="@+id/textDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="25dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Material"
                        android:textColor="@color/colorPrimaryDark"
                        android:paddingEnd="10dp"/>
                    <TextView
                        android:id="@+id/textMaterial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="25dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Season"
                        android:textColor="@color/colorPrimaryDark"
                        android:paddingEnd="10dp"/>
                    <TextView
                        android:id="@+id/textSeason"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="25dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/GivenBy"
                        android:textColor="@color/colorPrimaryDark"
                        android:paddingEnd="10dp"/>
                    <TextView
                        android:id="@+id/textGivenBy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="25dp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer"/>
</android.support.v4.widget.DrawerLayout>